--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,14 @@
 @use "./scss/" as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap");
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
 }
+
 html {
     font-size: 100%;
 
@@ -19,50 +20,65 @@ html {
         font-size: 60%;
     }
 }
-body{
+
+body {
     font-family: $font-family;
     font-weight: 400;
     line-height: 1.5;
+
     background-color: $body-bg;
     color: $txt-color;
-@include mobile{
-    margin-bottom: 3rem;
+
+    @include mobile {
+        margin-bottom: 3rem;
+    }
 }
-}
-a{
+
+a {
     text-decoration: none;
     color: unset;
 }
-@media(hover:hover){
-a:hover{
-    color: $main-color;
-}    
+
+@media (hover: hover) {
+    a:hover {
+        color: $main-color;
+    }
 }
-button,input{
-    outline:0
+
+button,
+input {
+    outline: 0;
 }
-ul{
+
+ul {
     list-style-type: none;
 }
-img{
+
+img {
     max-width: 100%;
 }
-iframe{
-    border:0;
+
+iframe {
+    border: 0;
 }
-.container{
+
+.container {
     max-width: 1660px;
-    margin:auto;
+    margin: auto;
 }
-.mb-3{
+
+.mb-3 {
     margin-bottom: 3rem;
 }
-.mb-2{
-    margin-bottom:2rem;
+
+.mb-2 {
+    margin-bottom: 2rem;
 }
-.section{
-    padding:0 2rem;
+
+.section {
+    padding: 0 2rem;
 }
-.section__header{
-    @include flex(center,space-between);
+
+.section__header {
+    @include flex(center, space-between);
 }
